# glean

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  fetch.yml
data/: edges.json  papers.json  seeds.yaml
scripts/: fetch.py  score.py  summarize.py
site/: index.html
site/css/: style.css
site/js/: add.js  app.js  gh.js  graph.js  reader.js  threads.js
